--- a/gatsby-starter-default/src/components/layout.css
+++ b/gatsby-starter-default/src/components/layout.css
@@ -32,17 +32,38 @@ html {
   font-size: var(--font-md);
   line-height: var(--line-height-normal);
   overflow-y: scroll;
+  height: 100%;
 }
 body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   color: var(--color-text);
-  font-family: sans-serif;
-  font-family: var(--font-sans);
+  font-family: "Helvetica Neue";
   font-weight: normal;
   margin: 0;
   word-wrap: break-word;
+  background-color: rgb(239, 239, 239);
 }
+
+/* 
+ * Purpose:
+ * Assign height: "100%" to
+ * html, body, #___gatsby &  
+ * div with role="group"
+*/
+
+html, body, #___gatsby {
+  height: 100%;
+}
+
+body {
+  margin: 0px;
+}
+
+div[role="group"][tabindex] {
+  height: 100%;
+}
+
 a {
   background-color: transparent;
   color: var(--color-primary);
